--- a/Projects/apple/index.html
+++ b/Projects/apple/index.html
@@ -31,9 +31,10 @@
           </div>
       <div class="navbar-collapse collapse" id="items">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#personal">About</a></li>
+          <li class="active"><a href="#personal">Sobre mim</a></li>
           <li><a href="#portifolio">Portifolio</a></li>
           <li><a href="#social">Social</a></li>
+          <li><a href="#MinhPage">Teste</a></li>
         </ul>
       </div>
       </div>
@@ -108,7 +109,7 @@
         </div>
         <div class="social-buttons" style="text-align:center">
         <div class="row">
-          <div class="col-md-4 col-xs-12 col-sm-4"><a href="https://github.com/chamatt" target="_blank" title="Github" class="btn btn-default"><i class="fa fa-github"></i></a>
+          <div class="col-md-4 col-xs-12 col-sm-4"><a href="https://github.com/K1NSLEY" target="_blank" title="Github" class="btn btn-default"><i class="fa fa-github"></i></a>
           </div>
            <div class="col-md-4 col-xs-12 col-sm-4"><a href="https://www.freecodecamp.com/chamatt" target="_blank" title="FreeCodeCamp" class="btn btn-default text-center"><i class="fa fa-free-code-camp"></i></a>
           </div>
