--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
     <div class="selct">
         <h2><span>Links test:</span></h2>
     </div>
-    <a href="https://api.whatsapp.com/send/?phone=6611939511960&text&type=phone_number&app_absent=0" target="_blank">Meu
-        Whatsapp</a><br>
-    <a href="mailto:kinsbrasil@gmail.com.br" target="_blank">Gmail</a><br>
+    <a href="https://api.whatsapp.com/send/?phone=6611939511960&text&type=phone_number&app_absent=0" target="_blank">Meu Whatsapp</a><br>
+    <a href="mailto:kinsbrasil@gmail.com">Enviar um e-mail</a><br>
     <a href="tel:+5511949511960" target="_blank">Telefone</a><br>
     <a href="C:\Users\kinsb\OneDrive\Documentos\VScode\Exerc dos Links e Dir\index.html" target="_blank">Primeiro Projeto</a><br>
     <a href="Arduino/index.html">Projeto Arduino</a>
