--- a/Projects/port/index.html
+++ b/Projects/port/index.html
@@ -1,6 +1,18 @@
-<div class="card">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <title>Document</title>
+</head>
+<body>
+    <div class="card">
     <div class="inner">
         <img src="https://wallpapercave.com/wp/wp9128445.jpg"/>
     </div>
     <img src="https://icons.veryicon.com/png/Game/League%20Of%20Legends%20Gold%20Border/Garen%20Visual%20Upgrade.png" class="title" />
 </div>
+    
+</body>
+</html>
